--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
     align-content: center;
     min-height: 100vh;
     grid-template-columns: repeat(4, 100px);
-    grid-template-rows: minmax(120px, auto) repeat(4, 100px);
+    grid-template-rows: minmax(120px, auto) repeat(4, 100px);/*Add to my own calculator*/
 }
 
 .calculator-grid > button{
@@ -30,4 +30,15 @@ body{
 
 .span-two{
     grid-column: span 2;
+}
+.output{
+    grid-column: 1 / -1;
+    background-color: rgba(0, 0, 0, 0.75);
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+    flex-direction: column;
+    padding: 10px;
+    word-wrap: break-word;/*Add to my own calculator*/
+    word-break: break-all;/*Add to my own calculator*/
 }
